# mrestimator

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST  MANIFEST.in  Makefile  README  README.md  TODO.md  mre.py  mre1.py  mre2.py  mrebias.py  mrebiaslong.py  proposal_function_definition.py  pyproject.toml  setup.py
.github/workflows/: pytest.yaml  release.yaml  ruff.yaml
docs/: Makefile  changelog.rst  conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/latex/: mre.aux  mre.fdb_latexmk  mre.fls  mre.idx  mre.ilg  mre.ind  mre.out  mre.tex  mre.toc
docs/doc/: coefficients.rst  contributing.rst  exporting.rst  fit.rst  fitfunctions.rst  full_analysis.rst  gettingstarted.rst  importing.rst  mre.rst  outlook.rst  toolbox.rst
docs/rst/: core.rst  exporting.rst  fitfunctions.rst  gettingstarted.rst  importing.rst  mre.rst  outlook.rst
example/: README.md  create_example_data.py  example.py
example/data/: full.tsv  sub_00.tsv  sub_01.tsv  sub_02.tsv  sub_03.tsv  sub_05.tsv  sub_06.tsv  sub_07.tsv  sub_09.tsv
examples/: basic_usage.ipynb
examples/getting_started/: README.md  create_example_data.py  example.py
examples/getting_started/data/: drive.tsv  sub_04.tsv  sub_08.tsv
examples/getting_started/output/: .tsv  Branching Process.tsv  Full Analysis.tsv  SM.tsv  custom.tsv  result.tsv
examples/paper/: coefficients.py  experimental.py  workflow.py
mrestimator/: __init__.py  _version.py  coefficients.py  fit.py  input_output.py  logm.py  simulate.py  utility.py  wrapper.py
mrestimator/test_suite/: __init__.py  test_coefficients.py  test_mr_estimator.py
mrestimator/test_suite/data/: activity_mat_20.pickled
tests/: __init__.py  make_test_data.py  test_coefficients.py  test_mr_estimator.py  test_paul.py
tests/data/: activity_mat_0.pickled  activity_mat_10.pickled  activity_mat_30.pickled
